FreeCodeCamp/Wikipedia_Viewer/wiki.css
html, body {
  height: 100%;
  width: 100%;
  font-family: "Segoe UI", Segoe, Tahoma, Geneva, sans-serif;
/*  font-size: 18px;*/
  line-height: 1.4em;
  background-color: #874C62;
}

li {
  background-color: #F7F5E6;
  list-style-type: none;
  margin-bottom: 10px;
  padding: 20px 20px 0px 20px;
  border-radius: 4px;
}

li:hover {
  border-left: 5px solid #3CC47C;
  margin-left: -5px;
}

a, a:visited, a:hover, a:active, a:-webkit-any-link {
  text-decoration: none;
  color: black;
}

input {
  transition: width 0.6s, border-radius 0.6s, background 0.6s, box-shadow 0.6s;
  width: 40px;
  height: 40px;
  border-radius: 20px;
  border: none;
  cursor: pointer;
  background: #3CC47C;
/*  border: 2px solid #3CC47C;
  border-radius: 8px;*/
}

input:hover {
  color: white;
  background: rgb(200, 200, 200);
  box-shadow: 0 0 0 5px rgb(61, 71, 82);
/*  & + label .search-icon {    color: white    }*/
}

input:focus {
  transition: width 0.6s, border-radius 0.6s, background 0.6s;
  border: none;
  outline: none;
  box-shadow: none;
  padding-left: 15px;
  cursor: text;
  width: 300px;
  border-radius: auto;
  background: rgb(235, 235, 235);
  color: black;
}

.search-icon {
  position: relative;
  left: -30px;
  color: white;
  cursor: pointer;
}

.btn {
  font-size: 18px;
  background-color: #3CC47C;
  border: #2FA063;
  color: #fff;
}

.btn:focus, .btn:hover, .btn:active, .btn:visited {
  outline-style: none;
  background-color: #2FA063;
  color: #fff;
}

.search {
  vertical-align: middle;
  text-align: center;
  padding: 20px;
}

#form {
  padding: 20px;
}

